// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainersList> should render 1`] = `
<TrainersList__StyledTrainersList>
  <Text
    margin="0 0 0.5em 0"
    type="secondary"
  >
    Trenerzy
  </Text>
  <Trainer
    important={true}
    trainer={
      UserModel {
        "email": undefined,
        "name": undefined,
        "nickname": undefined,
        "picture": undefined,
      }
    }
  />
  <button
    onClick={[Function]}
  >
    Chcę być trenerem
  </button>
</TrainersList__StyledTrainersList>
`;

exports[`<TrainersList> when trainers are provided should match snapshot 1`] = `
<TrainersList__StyledTrainersList>
  <Text
    margin="0 0 0.5em 0"
    type="secondary"
  >
    Trenerzy
  </Text>
  <Trainer
    important={true}
    trainer={
      UserModel {
        "email": undefined,
        "name": undefined,
        "nickname": undefined,
        "picture": undefined,
      }
    }
  />
  <Trainer
    key="0"
    trainer={
      UserModel {
        "email": undefined,
        "name": undefined,
        "nickname": undefined,
        "picture": undefined,
      }
    }
  />
  <Trainer
    key="1"
    trainer={
      UserModel {
        "email": undefined,
        "name": undefined,
        "nickname": undefined,
        "picture": undefined,
      }
    }
  />
  <button
    onClick={[Function]}
  >
    Chcę być trenerem
  </button>
</TrainersList__StyledTrainersList>
`;
